--- a/.github/workflows/auto-merge.yaml
+++ b/.github/workflows/auto-merge.yaml
@@ -6,5 +6,5 @@ name: 'Auto merge'
 jobs:
   auto-merge:
     uses: zregvart-test/shared-workflows/.github/workflows/auto-merge.yaml@main
-    with:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    # with:
+    #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
