--- a/.github/workflows/auto-merge.yaml
+++ b/.github/workflows/auto-merge.yaml
@@ -6,5 +6,4 @@ name: 'Auto merge'
 jobs:
   auto-merge:
     uses: zregvart-test/shared-workflows/.github/workflows/auto-merge.yaml@main
-    with:
-      access-token: ${{ secrets.GITHUB_TOKEN }}
+    secrets: inherit
